--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "react-hacker-effect",
   "version": "0.0.0-development",
   "description": "Hacker Text Animation",
-  "main": "index.ts",
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "types": "build/index.d.ts",
+  "type": "module",
   "engines": {
     "node": ">=16"
   },
@@ -24,28 +27,31 @@
   "author": "nekzus",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/react": "^18.2.38",
-    "babel-loader": "^9.1.3",
+    "@types/react-dom": "^18.2.16",
     "cz-conventional-changelog": "^3.3.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "semantic-release": "^22.0.8"
+    "parcel-bundler": "^1.12.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup": "^4.5.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "semantic-release": "^22.0.8",
+    "typescript": "^5.3.2"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   },
   "scripts": {
-    "start": "webpack --mode development --watch",
-    "build": "webpack --mode production",
+    "start": "parcel --out-dir playground-build ./src/root/index.html",
+    "build": "rollup --config --bundleConfigAsCjs",
     "commit": "git-cz",
     "semantic-release": "semantic-release --branches main"
-  },
-  "dependencies": {
-    "react": "^18.2.0"
   },
   "repository": {
     "type": "git",
@@ -59,5 +65,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "src": "^1.1.2"
   }
 }
