--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,35 @@
-// tsconfig.json
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": [
-            "dom",
-            "es2015"
-        ],
-        "module": "esnext",
-        "moduleResolution": "node",
-        "jsx": "react",
-        "strict": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true,
-        "skipDefaultLibCheck": true,
-        "baseUrl": "./src"
-    },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx"
+  "compilerOptions": {
+    "baseUrl": "./",
+    "module": "esnext",
+    "target": "es5",
+    "lib": [
+      "es6",
+      "dom",
+      "es2016",
+      "es2017"
     ],
-    "exclude": [
-        "node_modules"
-    ]
+    "sourceMap": true,
+    "allowJs": false,
+    "declaration": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "esModuleInterop": true,
+    "downlevelIteration": true,
+    "jsx": "react"
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "build",
+    "playground-build"
+  ]
 }
