--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "typescript": "^5.3.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": ">=16"
   },
   "scripts": {
     "start": "parcel --out-dir playground-build ./src/root/index.html",
